Finished Image Loader and Uploader.Finished all Staff and 3/4 Admin Function